--- a/frontend/src/Pages/Home.css
+++ b/frontend/src/Pages/Home.css
@@ -8,6 +8,7 @@
 
 .cards{
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: #28282B;
@@ -18,7 +19,7 @@
 #card{
   border-radius: 10px;
   height: 350px;
-  width: 500px;
+  width: 550px;
   background-color: white;
   padding: 15px;
   display: flex;
@@ -27,7 +28,6 @@
   justify-content: center;
   margin: 1rem;
 }
-
 
 /* #card h1{
   font-size: 22px;
